[project]
name = "artichoke-nightly"
version = "0"
license = {file = "LICENSE"}
classifiers = ["Private :: Do Not Upload"]
dependencies = [
  "validators==0.22.0",
]
requires-python = ">= 3.12"

[project.optional-dependencies]
dev = [
  "black==23.12.1",
  "mypy==1.7.1",
  "ruff==0.1.8",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
strict = true
show_error_codes = true
pretty = true
exclude = [
  "^.git$",
  "^venv$",
]

[[tool.mypy.overrides]]
module = ["validators.*"]
ignore_missing_imports = true

[tool.ruff]
select = [
  "E",
  "F",
  "I",
  "UP",
  "YTT",
  "ANN",
  "S",
  "BLE",
  "FBT",
  "B",
  "C4",
  "T10",
  "ISC",
  "ICN",
  "RET",
  "SIM",
  "ARG",
  "ERA",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "PIE",
  "RUF",
]

ignore = ["S603", "UP007"]
