[project]
name = "artichoke-nightly"
version = "0"
license = {file = "LICENSE"}
classifiers = ["Private :: Do Not Upload"]
dependencies = [
  "stamina==24.2.0",
  "validators==0.22.0",
]
requires-python = ">= 3.12"

[project.optional-dependencies]
dev = [
  "black==24.1.1",
  "mypy==1.8.0",
  "ruff==0.1.15",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true

[tool.mypy]
python_version = "3.12"
strict = true
show_error_codes = true
pretty = true
exclude = [
  "^.git$",
  "^venv$",
]

[[tool.mypy.overrides]]
module = ["validators.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
select = ["ALL"]
ignore = ["COM812", "D", "EM", "S603", "T201", "TRY003", "UP007"]
